# Absinthe-2.0

./: .gitignore  .markdownlintignore  AUTHORS  BUILDING.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  Makefile.am  NEWS  README.md  configure.ac
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: Makefile.am  absinthe.c  absinthe.h  afc.c  bpatch.c  crashreporter.c  dyldcache.c  fsgen.c  idevicebackup2.c  jailbreak.c  jailbreak_51.c  jailbreak_51.h  macho.c  macho_section.c  mb2.c  rop.c
tests/: Makefile.am  test_backup.c  test_bpatch.c  test_macho.c  test_mbdb_record.c
tools/: rop.c
